added google fonts links to html and font-family to essentials.css  header.css and layout.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 
 		<link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/color_scheme/red.css" rel="stylesheet" type="text/css" id="color_scheme" />
-	</head>
+		
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet" />
+	
+	 </head>
 
 	<body class="smoothscroll enable-animation">
 
@@ -104,7 +109,7 @@
 
 							<div class="overlay dark-7"></div>
 							
-							<div class="tp-caption font-roboto skewfromleft tp-resizeme"
+							<div class="tp-caption font-san skewfromleft tp-resizeme"
 								data-x="50"
 								data-y="100" 
 								data-speed="500"
