Residential table updated. Still need to make CSS make changes.

--- a/commercial.html
+++ b/commercial.html
@@ -27,6 +27,31 @@
 		<!-- PAGE LEVEL SCRIPTS -->
 		<link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/color_scheme/red.css" rel="stylesheet" type="text/css" id="color_scheme" />
+	
+	
+		<style>
+			/* Ensure the entire footer background is blue */
+			footer#footer {
+				background-color: #0a65a0 !important;
+			}
+			footer#footer .container {
+				background-color: #0a65a0 !important;
+			}
+			.footer-disclaimer {
+				background-color: #0a65a0 !important;
+			}
+			.copyright {
+				background-color: #0a65a0 !important;
+			}
+			#footer .row {
+				background-color: #0a65a0 !important;
+			}
+		</style>
+	
+	
+	
+	
+	
 	</head>
 
 	<body class="smoothscroll enable-animation">
@@ -108,7 +133,7 @@
 
 
 			<!-- PAGE HEADER BREADCRUMBS -->
-			<section class="page-header page-header-xs parallax parallax-3" style="background-image:url('assets/images/rocketElevators/imgpattern2.jpg')">
+			<section class="page-header page-header-xs parallax parallax-3" style="background-color:#A94545">
 				<div class="overlay dark-2"></div>
 				<div class="container">
 					<h1 style="text-shadow:rgb(0 0 0 / 30%) 3px 3px 5px"><strong>COMMERCIAL SERVICES</strong></h1>
