--- a/commercial.html
+++ b/commercial.html
@@ -59,7 +59,7 @@
 		<!-- wrapper -->
 		<div id="wrapper">
 
-            <!-- TOP NAVIGATION -->
+            <!-- TOP NAVIGATION BAR -->
             <div id="header" class="navbar-toggleable-md sticky header-md clearfix">
 				<header id="topNav">
 					<div class="container">
@@ -127,7 +127,7 @@
 
 					</div>
 				</header>
-				<!-- TOP NAV -->
+				<!-- TOP NAVIGATION BAR ENDED -->
 
 			</div>
 
@@ -144,7 +144,7 @@
 					</ol>
 				</div>
 			</section>
-			<!-- /PAGE HEADER BREADCRUMS -->
+			<!-- /PAGE HEADER BREADCRUMS ENDED-->
 
 
 			<!-- LAYER SLIDER -->
@@ -323,7 +323,7 @@
 
 				</div>
 			</section>
-			<!-- /LAYER SLIDER -->
+			<!-- /LAYER SLIDER ENDED -->
 
 
 			<!-- BUSINESS MODEL -->
@@ -375,7 +375,7 @@
 
 				</div>
 			</section>
-			<!-- /BUSINESS MODEL -->
+			<!-- /BUSINESS MODEL ENDED-->
 
 
 
@@ -392,7 +392,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- /PARALLAX -->
+			<!-- /PARALLAX ENDED-->
 
 
 			<!-- TESTIMONIAL -->
@@ -458,7 +458,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- /TESTIMONIAL -->
+			<!-- /TESTIMONIAL ENDED-->
 
 
 			<!-- MODAL -->
@@ -483,7 +483,7 @@
 				
 				</div>
 			</div>
-			<!-- /MODAL -->
+			<!-- /MODAL ENDED -->
 
 			<!-- FOOTER -->
 			<footer id="footer">
