--- a/quote.html
+++ b/quote.html
@@ -18,6 +18,7 @@
 
 		<link href="assets/css/essentials.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/layout.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/index.css"  rel="stylesheet" type="text/css" />
 
 		<link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/color_scheme/red.css" rel="stylesheet" type="text/css" id="color_scheme" />
